
  Gii Template Collection Change Log
  ==================================

Version 0.5
-----------
- Chg: Switch from CAdvancedArBehavior to CSaveRelationsBehavior for the MANY_MANY relations support. The provided CSaveRelationsBehavior is the latest version from http://www.yiiframework.com/extension/save-relations-ar-behavior/ (currently 1.0.3). For backwards compatibility/convenience the old CAdvancedArBehavior.php is still provided in the vendors/ folder. However this file is no longer automatically placed in extensions/ and will probably be removed in the future. (rawtaz)
- Fix: Add missing translation for "Update" in "update" view. (robregonm)
- Fix: Add missing translation call for "Add new". Neutralized from "Add a new" to lessen the effect of words' gender mismatch. Note: I only added Swedish translation, the other ones need to be added. (rawtaz)
- New: Added Swedish translation. (rawtaz)
- New: Added cancel button to Create and Update form (thyseus)
- New: Make Form entries persistant with $_SESSION (thyseus)
- Chg: Move Relation Widget and CAdvancedArBehavior to extensions folder, not components/ anymore because ext.Relation looks better than application.components.Relation and there is no default Path alias for components (thyseus)
- Fix: Relation: Make the widget not add a delimiter after the last field when concatenating multiple fields. (rawtaz)
- Fix: FullModel: A bug in the model template made Gii/Yii look for the CAdvancedArBehavior directly (not via path alias). (rawtaz)  
- New: Added support for generating activeDropDownList's for ENUM mysql column fields
- Fix: Add missing translation for "Fields with * are required". (robregonm)
- Fix: Fix translation when generating "view" file. (robregonm)
- Fix: Added returnUrl verification to actionDelete. Added unsetAttributtes to actionAdmin. (robregonm)

Version 0.4
-----------
<Censored by the Council of Galaxy Hitchhiking>

Version 0.3
-----------
- Fix: Datepicker is now working